.provarCaches/00D5f000005vwGkEAI/objects/rstk__poprintline__c.object
<CustomObject>
    <description>poprintline__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_actvendshipdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor actual ship date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipName>poprintlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_closeshortind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Close Short Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_deleteind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_descr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divpoprintlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_duedte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sched Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_effrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Effective Item Revision</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipName>POPRINTLINEs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_engitemnotes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Obsolete Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_engitemrevnotes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Obsolete Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_exchangerate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_firstrcptdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>First Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_fob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight On Board</label>
        <referenceTo>rstk__syfob__c</referenceTo>
        <relationshipName>poprintlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_frghtrm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Terms</label>
        <referenceTo>rstk__syfrghtrm__c</referenceTo>
        <relationshipName>poprintlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inv Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>invdivpoprintlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_invsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>poprintlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_invuom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Unit of Measure</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipName>poprintlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__poitem__c</referenceTo>
        <relationshipName>POPRINTLINEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_lne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_longdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_lstbookdtetime__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Last Receipt Book Date/Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_notes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__poprinthdr__c</referenceTo>
        <relationshipName>POPRINTLINEs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_ordsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2-Firmed</fullName>
                </value>
                <value>
                    <fullName>3-Approvals Processing</fullName>
                </value>
                <value>
                    <fullName>4-Approved</fullName>
                </value>
                <value>
                    <fullName>5-Vendor Notified</fullName>
                </value>
                <value>
                    <fullName>7-Line Item Received</fullName>
                </value>
                <value>
                    <fullName>8-All Line Items Received</fullName>
                </value>
                <value>
                    <fullName>9-Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poprintline_origqtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Original Qty Required</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_overrcptind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Over Receipt Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable PO Line</inlineHelpText>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipName>POPRINTLINEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_potype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indirect Material</fullName>
                </value>
                <value>
                    <fullName>Outside Labor</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Subcontract Purchase Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poprintline_poumcf__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>UOM Conversion Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_puritemnotes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Obsolete Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_puruom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purch UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipName>poprintline1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_qtyacc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Accepted</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_qtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Remaining</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_qtyreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Required</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_qtyrtv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty RTV</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_rcptlocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receiving Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipName>POPRINTLINEs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_rcptlocnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receiving Location No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_schedpickdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sched Pick Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_schedrcptdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sched Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_shiptoseqno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Address Sequence Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_shipviatype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship Via</label>
        <referenceTo>rstk__syshipviatype__c</referenceTo>
        <relationshipName>poprintlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_subcntcompactrcptdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>subcontract comp act rcpt date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_subcntcompactshipdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>subcontract comp act ship date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_taxableind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_unitprice__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price (Home Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_unitpricevcurr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Price (Vendor Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_vendrev__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor Revision</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprintline_vendshipdte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sched Vendor Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Print Line</label>
    <listViews>
        <fullName>rstk__PO_Print_Line</fullName>
        <columns>NAME</columns>
        <columns>rstk__poprintline_div__c</columns>
        <columns>rstk__poprintline_poline__c</columns>
        <columns>rstk__poprintline_vendrev__c</columns>
        <columns>rstk__poprintline_item__c</columns>
        <columns>rstk__poprintline_descr__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poprintline_qtyreq__c</columns>
        <columns>rstk__poprintline_duedte__c</columns>
        <columns>rstk__poprintline_qtyacc__c</columns>
        <columns>rstk__poprintline_qtyoutstdg__c</columns>
        <columns>rstk__poprintline_origqtyreq__c</columns>
        <columns>rstk__poprintline_unitprice__c</columns>
        <columns>rstk__poprintline_unitpricevcurr__c</columns>
        <filterScope>Everything</filterScope>
        <label>PO Print Line</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PO_Print_Line_Select</fullName>
        <columns>NAME</columns>
        <columns>rstk__poprintline_div__c</columns>
        <columns>rstk__poprintline_poline__c</columns>
        <columns>rstk__poprintline_vendrev__c</columns>
        <columns>rstk__poprintline_item__c</columns>
        <columns>rstk__poprintline_descr__c</columns>
        <columns>rstk__poprintline_qtyreq__c</columns>
        <columns>rstk__poprintline_duedte__c</columns>
        <columns>rstk__poprintline_qtyacc__c</columns>
        <columns>rstk__poprintline_qtyoutstdg__c</columns>
        <columns>rstk__poprintline_origqtyreq__c</columns>
        <columns>rstk__poprintline_unitprice__c</columns>
        <columns>rstk__poprintline_unitpricevcurr__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__poprintline_div__c</field>
            <operation>contains</operation>
            <value>col</value>
        </filters>
        <filters>
            <field>rstk__poprintline_poline__c</field>
            <operation>contains</operation>
            <value>15056</value>
        </filters>
        <label>PO Print Line - Select</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>POPRINTLINE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Print Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>